--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,10 @@
     "Justin Kimbrell"
   ],
   "description": "FlipClock.js is a proper abstract object oriented clock and counter library with a realistic flip effect.",
-  "main": "compiled/flipclock.js",
+  "main": [
+    "compiled/flipclock.js",
+    "compiled/flipclock.css"
+  ],
   "license": "MIT",
   "ignore": [
     ".jshintrc",
