--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "FlipClock",
-	"version": "0.7.3",
+	"name": "flipclock",
+	"version": "0.7.4",
 	"email": "support@objectivehtml.com",
   "author": "Objective HTML, LLC <support@objectivehtml.com>",
   "license": "MIT",
@@ -19,10 +19,6 @@
 
   "bugs": {
 		"url": "https://github.com/nodejitsu/browsenpm.org/issues"
-	},
-
-  "bin": {
-	  "FlipClock": "./bin/FlipClock"
 	},
 
 	"dependencies": {
