--- a/package.json
+++ b/package.json
@@ -1,27 +1,24 @@
 {
-	"name": "flipclock",
-	"version": "0.7.8",
-	"email": "support@objectivehtml.com",
+  "name": "flipclock",
+  "version": "0.7.8",
+  "email": "support@objectivehtml.com",
   "author": "Objective HTML, LLC <support@objectivehtml.com>",
   "license": "MIT",
-
-	"devDependencies": {
-		"grunt": "~0.4.2",
-		"grunt-contrib-jshint": "~0.6.3",
-		"grunt-contrib-uglify": "~0.2.7",
-		"grunt-contrib-concat": "~0.3.0"
-	},
-	
-	"repository": {
-	  "type": "git",
-	  "url": "https://github.com/objectivehtml/FlipClock"
-	},
-
+  "devDependencies": {
+    "grunt": "~0.4.2",
+    "grunt-contrib-jshint": "~0.6.3",
+    "grunt-contrib-uglify": "~0.2.7",
+    "grunt-contrib-concat": "~0.3.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/objectivehtml/FlipClock"
+  },
   "bugs": {
-		"url": "https://github.com/nodejitsu/browsenpm.org/issues"
-	},
-
-	"dependencies": {
-		"jquery": ">=1.7"
-	}
+    "url": "https://github.com/nodejitsu/browsenpm.org/issues"
+  },
+  "dependencies": {
+    "grunt-contrib-watch": "^0.6.1",
+    "jquery": ">=1.7"
+  }
 }
