moving dependency to dev

--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "license": "MIT",
   "devDependencies": {
     "grunt": "~0.4.2",
+    "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-jshint": "~0.6.3",
     "grunt-contrib-uglify": "~0.2.7",
-    "grunt-contrib-concat": "~0.3.0"
+    "grunt-contrib-watch": "^0.6.1"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,6 @@
     "url": "https://github.com/nodejitsu/browsenpm.org/issues"
   },
   "dependencies": {
-    "grunt-contrib-watch": "^0.6.1",
     "jquery": ">=1.7"
   }
 }
