--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "grunt": "~0.4.2",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-jshint": "~0.6.3",
-    "grunt-contrib-uglify": "~0.2.7",
-    "grunt-jsdoc": "^0.5.7"
+    "grunt-contrib-uglify": "~0.2.7"
   },
   "repository": {
     "type": "git",
