--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "email": "support@objectivehtml.com",
   "author": "Objective HTML, LLC <support@objectivehtml.com>",
   "license": "MIT",
+  "keywords": [
+    "clock",
+    "timer",
+    "countdown",
+    "flip"
+  ],
   "devDependencies": {
     "grunt": "~0.4.2",
     "grunt-contrib-concat": "~0.3.0",
