--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "license": "MIT",
   "main": "compiled/flipclock.js",
   "devDependencies": {
+    "autoprefixer": "^6.3.6",
     "grunt": "~0.4.2",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-jshint": "~0.6.3",
     "grunt-contrib-uglify": "~0.2.7",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-postcss": "^0.8.0",
+    "grunt-sass": "^1.2.0",
+    "node-bourbon": "^4.2.8"
   },
   "repository": {
     "type": "git",
