--- a/package.json
+++ b/package.json
@@ -1,46 +1,97 @@
 {
-  "name": "flipclock",
-  "version": "0.7.8",
-  "email": "support@objectivehtml.com",
-  "author": "Objective HTML, LLC <support@objectivehtml.com>",
-  "contributors": [
-    "Objective HTML, LLC <support@objectivehtml.com>",
-    "Brian Espinosa <b@bje.co>"
-  ],
-  "description": "A fully featured countdown clock.",
-  "keywords": ["clock", "countdown", "time", "javascript", "html", "css", "sass", "scss"],
-  "license": "MIT",
-  "engines": {
-    "node": "^0.12.x",
-    "npm": "^2.1.x"
-  },
-  "devDependencies": {
-    "grunt": "~0.4.2",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-jshint": "~0.6.3",
-    "grunt-contrib-uglify": "~0.2.7",
-    "browser-sync": "^2.11.1",
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^2.3.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-header": "^1.7.1",
-    "gulp-notify": "^2.2.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.0.x",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-strip-css-comments": "^1.2.0",
-    "gulp-uglify": "^1.4.2"
-  },
-  "main": "dist/flipclock.js",
-  "homepage": "http://flipclockjs.com/",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/objectivehtml/FlipClock"
-  },
-  "bugs": {
-    "url": "https://github.com/objectivehtml/FlipClock/issues"
-  },
-  "dependencies": {
-    "jquery": ">=1.7"
-  }
+    "name": "flipclock",
+    "version": "0.7.8",
+    "email": "support@objectivehtml.com",
+    "author": "Objective HTML, LLC <support@objectivehtml.com>",
+    "contributors": [
+        "Objective HTML, LLC <support@objectivehtml.com>",
+        "Brian Espinosa <b@bje.co>"
+    ],
+    "description": "A fully featured countdown clock.",
+    "keywords": [
+        "clock",
+        "countdown",
+        "time",
+        "javascript",
+        "html",
+        "css",
+        "sass",
+        "scss"
+    ],
+    "license": "MIT",
+    "engines": {
+        "node": "^0.12.x",
+        "npm": "^2.1.x"
+    },
+    "devDependencies": {
+        "@ava/babel-preset-stage-4": "^1.1.0",
+        "@ava/babel-preset-transform-test-files": "^3.0.0",
+        "@babel/core": "^7.0.0-beta.38",
+        "@babel/polyfill": "^7.0.0-beta.38",
+        "@babel/preset-env": "^7.0.0-beta.38",
+        "@babel/register": "^7.0.0-beta.38",
+        "ava": "^0.24.0",
+        "babel-cli": "^6.26.0",
+        "babel-core": "^6.26.0",
+        "babel-jest": "^22.1.0",
+        "babel-plugin-lodash": "^3.3.2",
+        "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+        "babel-preset-env": "^1.6.1",
+        "babel-preset-es2015-rollup": "^3.0.0",
+        "jest": "^22.1.4",
+        "jsdom": "^11.5.1",
+        "regenerator-runtime": "^0.11.1",
+        "rollup-plugin-babel": "^3.0.3",
+        "rollup-plugin-commonjs": "^8.2.6",
+        "rollup-plugin-json": "^2.3.0",
+        "rollup-plugin-livereload": "^0.6.0",
+        "rollup-plugin-node-resolve": "^3.0.2",
+        "rollup-plugin-sass": "^0.5.3",
+        "rollup-plugin-serve": "^0.4.2",
+        "uglify-es": "^3.3.8"
+    },
+    "main": "dist/flipclock.js",
+    "homepage": "http://flipclockjs.com/",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/objectivehtml/FlipClock"
+    },
+    "bugs": {
+        "url": "https://github.com/objectivehtml/FlipClock/issues"
+    },
+    "dependencies": {
+        "@objectivehtml/broadcast": "^0.2.4",
+        "babel-polyfill": "^6.26.0",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-register": "^6.26.0",
+        "lodash": "^4.17.4",
+        "lodash-es": "^4.17.4"
+    },
+    "scripts": {
+        "build": "rollup -c --watch",
+        "build-library": "rollup -c;",
+        "commit": "git add -A && git commit -m $npm_package_version;",
+        "release-patch": "npm version patch --no-git-tag-version; npm run release;",
+        "release-minor": "npm version minor --no-git-tag-version; npm run release;",
+        "release-major": "npm version major --no-git-tag-version; npm run release;",
+        "release": "npm run build-library; npm run build-es2015; npm run build-vendor; npm run uglify; npm run commit; npm publish;",
+        "uglify": "npm run uglify-library; npm run uglify-es2015; npm run uglify-vendor;",
+        "uglify-vendor": "./node_modules/.bin/uglifyjs dist/vendor.js -o dist/vendor.min.js;",
+        "uglify-library": "./node_modules/.bin/uglifyjs dist/flipclock.js -o dist/flipclock.min.js;"
+    },
+    "ava": {
+        "files": [
+            "tests/**/*.spec.js"
+        ],
+        "source": [
+            "src/**/*.js"
+        ],
+        "require": [
+            "babel-register",
+            "babel-polyfill"
+        ],
+        "verbose": true,
+        "modules": false,
+        "babel": "inherit"
+    }
 }
