--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
         "sass",
         "scss"
     ],
+    "languages": [
+        "Arabic",
+        "Czech",
+        "English",
+        "Spanish"
+    ],
     "license": "MIT",
     "engines": {
         "node": "^0.12.x",
@@ -34,12 +40,15 @@
         "babel-cli": "^6.26.0",
         "babel-core": "^6.26.0",
         "babel-jest": "^22.1.0",
+        "babel-plugin-dynamic-import-node": "^1.2.0",
         "babel-plugin-lodash": "^3.3.2",
         "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+        "babel-polyfill": "^6.26.0",
         "babel-preset-env": "^1.6.1",
+        "babel-preset-es2015": "^6.24.1",
         "babel-preset-es2015-rollup": "^3.0.0",
+        "babel-register": "^6.26.0",
         "jest": "^22.1.4",
-        "jsdom": "^11.5.1",
         "regenerator-runtime": "^0.11.1",
         "rollup-plugin-babel": "^3.0.3",
         "rollup-plugin-commonjs": "^8.2.6",
@@ -61,11 +70,7 @@
     },
     "dependencies": {
         "@objectivehtml/broadcast": "^0.2.4",
-        "babel-polyfill": "^6.26.0",
-        "babel-preset-es2015": "^6.24.1",
-        "babel-register": "^6.26.0",
-        "lodash": "^4.17.4",
-        "lodash-es": "^4.17.4"
+        "lodash": "^4.17.4"
     },
     "scripts": {
         "build": "rollup -c --watch",
