--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "url": "https://github.com/nodejitsu/browsenpm.org/issues"
   },
   "dependencies": {
+    "grunt-cli": "^1.2.0",
     "jquery": ">=1.7"
   }
 }
