--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "flipclock",
+  "name": "flipclock-es6",
   "version": "0.8.1",
   "email": "support@objectivehtml.com",
   "author": "Objective HTML, LLC <support@objectivehtml.com>",
