--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
         "rollup-plugin-replace": "^2.0.0",
         "rollup-plugin-root-import": "^0.2.2",
         "rollup-plugin-sass": "^0.9.2",
+        "rollup-plugin-scss": "^0.4.0",
         "rollup-plugin-serve": "^0.4.2",
         "rollup-plugin-uglify-es": "0.0.1"
     },
