--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,8 @@
 {
+    "env": {
+        "browser": true,
+        "es6": true
+    },
     "parserOptions": {
         "ecmaVersion": 6,
         "sourceType": "module",
