--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flipclock",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.0",
   "description": "A full featured, themeable, type safe, and well tested library for clocks, timers, counters, and flipboards.",
   "license": "MIT",
   "author": "objectivehtml",
