--- a/.github/workflows/beta.yaml
+++ b/.github/workflows/beta.yaml
@@ -16,6 +16,8 @@ permissions:
   contents: read
   pages: write
   id-token: write
+  pull-requests: write
+  packages: write
 
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
