chore: added codecov

--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -46,6 +46,10 @@ jobs:
         run: pnpm install --frozen-lockfile
       - name: Build
         run: pnpm build
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
