chore: updated readme badges

--- a/.github/workflows/beta.yaml
+++ b/.github/workflows/beta.yaml
@@ -44,8 +44,14 @@ jobs:
         uses: actions/configure-pages@v4
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
+      - name: Run tests
+        run: pnpm vitest run --coverage
       - name: Build
         run: pnpm build
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
