--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -45,11 +45,16 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
       - name: Run tests
-        run: pnpm vitest run --coverage
+        run: pnpm vitest run --coverage --reporter=junit --outputFile=test-report.junit.xml
       - name: Build
         run: pnpm build
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+      - name: Upload test results to Codecov
+        if: ${{ !cancelled() }}
+        uses: codecov/test-results-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
       - name: Upload artifact
